# SooTool

./: .gitignore  .mcp.json  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/skills/sootool/: SKILL.md
.github/workflows/: README.md  ci.yml  publish-pypi.yml
bench/: README.md  __init__.py  cases.yaml  run_benchmark.py
bench/results/: 2026-04-24-final.md  2026-04-24-sota.md  2026-04-24-v2.md  template.md
docs/: architecture.md  policy_management.md  release.md  skill_guide.md  user_guide.md
docs/cookbook/: engineering_electrical.md  finance_scenarios.md  tax_korea_2026.md
docs/integration/: agents-md-snippet.md  claude-md-snippet.md  cursor-rules-snippet.md
scripts/: count_tools.py  draft_changelog.py  mcp_smoke_http.py  mcp_smoke_sse.py  mcp_smoke_stdio.py  mcp_smoke_test.py  mcp_smoke_unix.py  mcp_smoke_ws.py  release_preflight.py
src/sootool/: __init__.py  __main__.py  server.py
src/sootool/core/: audit.py  batch.py  calc.py  cast.py  decimal_ops.py  determinism.py  errors.py  locale_kr.py  pipeline.py  registry.py  rounding.py  types.py  units.py
src/sootool/middleware/: __init__.py  auth.py  cors.py  locale.py  logging.py  request_id.py
src/sootool/modules/accounting/: README.md  __init__.py  bookkeeping.py  cashflow.py  depreciation.py  dupont.py  income_statement.py  ratios.py  vat.py
src/sootool/modules/crypto/: README.md  __init__.py  advanced.py  arithmetic.py  hash_ops.py  primes.py
src/sootool/modules/datetime_/: README.md  __init__.py  age.py  business_days.py  day_count.py  fiscal.py  lunar.py  timezone_ops.py
src/sootool/modules/engineering/: README.md  __init__.py  control.py  electrical.py  electrical_ac.py  equivalent_circuit.py  fluid.py  gear_bearing.py  materials.py  mechanical.py  reliability.py  si_prefix.py  structural.py  thermal.py
src/sootool/modules/finance/: README.md  __init__.py  bond.py  derivatives.py  loan.py  metrics.py  option.py  risk.py  tvm.py
src/sootool/modules/geometry/: README.md  __init__.py  area.py  distance.py  matrix_ops.py  (+2 more)
src/sootool/observability/: health.py  log_format.py
src/sootool/policies/: __init__.py
src/sootool/policy_mgmt/: __init__.py  audit.py  diff.py  drafts.py  loader.py  paths.py  schemas.py  signatures.py  tools.py  trace_ext.py  validators.py
src/sootool/skill_guide/: __init__.py  anti_patterns.py  examples.py  guide.py  hints.py  locale.py  playbooks.py  session_state.py  triggers.py
src/sootool/transports/: base.py  http.py  sse_legacy.py  stdio.py  unix.py  websocket.py
tests/bench/: test_cases_yaml.py
tests/core/: test_audit.py  test_batch.py  test_calc.py  test_cast.py  test_decimal_ops.py  test_determinism.py  test_integrity.py  test_locale_kr.py  test_pipeline.py  test_policies.py  test_registry.py  test_registry_post_processor.py  test_rounding.py  test_server.py  test_timeout_contracts.py  test_traps.py  test_types.py  test_units.py
tests/middleware/: test_auth.py  test_cors.py  test_locale.py  test_logging.py  test_request_id.py
tests/modules/accounting/: test_bookkeeping.py  test_cashflow.py  test_depreciation.py  test_dupont.py  test_income_statement.py  test_ratios.py  test_vat.py
tests/modules/crypto/: test_advanced.py  test_arithmetic.py  test_hash.py  test_primes.py
tests/modules/datetime_/: test_age.py  test_business_days.py  test_day_count.py  test_fiscal.py  test_lunar.py  test_timezone.py
tests/modules/engineering/: test_control.py  test_electrical.py  test_electrical_ac.py  test_equivalent_circuit.py  test_fluid.py  test_gear_bearing.py  test_materials.py  test_mechanical.py  test_reliability.py  test_si.py  test_structural.py  test_thermal.py
tests/modules/finance/: test_bond.py  test_derivatives.py  test_loan.py  test_metrics.py  test_option.py  test_risk.py  test_tvm.py
tests/modules/geometry/: test_area.py  test_distance.py  test_matrix.py  test_vector.py  test_volume.py
tests/modules/math/: test_differentiation.py  test_fft.py  test_integration.py  test_interpolation.py  test_polynomial.py
tests/modules/medical/: test_body.py  test_dose.py  test_egfr.py  test_pregnancy.py  test_qt_correction.py  test_risk_scores.py
tests/modules/payroll/: test_hourly_to_monthly_net.py  test_kr_bonus_tax.py  test_kr_donation_deduction.py  test_kr_education_deduction.py  test_kr_housing_loan_deduction.py  test_kr_medical_deduction.py  test_kr_salary.py  test_kr_severance_pay.py  test_kr_year_end_tax_settlement.py
tests/modules/pm/: test_cpm.py  test_earned_schedule.py  test_evm.py  test_monte_carlo.py  test_pert.py
tests/modules/probability/: test_bayes.py  test_combinatorics.py  test_distributions.py  test_distributions_extended.py  test_expected.py
tests/modules/realestate/: test_acquisition_tax.py  test_kr_comprehensive.py  test_kr_local_property.py  test_kr_property_tax.py  test_ratios.py  test_rental_yield.py  test_transfer_tax.py
tests/modules/science/: test_chemistry.py  test_electrochemistry.py  test_optics.py  test_physics.py  test_thermo.py
tests/modules/stats/: test_anova.py  test_bootstrap.py  test_ci.py  test_descriptive.py  test_effect_size.py  test_inference.py  test_nonparametric.py  test_regression.py
tests/modules/symbolic/: test_diff.py  test_solve.py
tests/modules/tax/: test_capital_gains.py  test_kr_corporate.py  test_kr_education_tax_add.py  test_kr_gift.py  test_kr_income.py  test_kr_inheritance.py  test_kr_local_income_tax.py  test_kr_rural_special_tax.py  test_kr_simplified_vat.py  test_kr_withholding.py  test_progressive.py
tests/modules/tax_us/: test_capital_gains.py  test_federal_income.py  test_state_tax.py
tests/modules/units/: test_convert.py  test_currency.py  test_extended.py  test_temperature.py
tests/policy_mgmt/: test_audit.py  test_diff.py  test_drafts.py  test_loader.py  test_schemas.py  test_tools.py  test_trace_extension.py  test_validators.py
tests/skill_guide/: test_domain_hints.py  test_guide.py  test_hints.py  test_locale.py  test_session_state.py
tests/transports/: test_http.py  test_multi.py  test_sse_legacy.py  test_unix.py  test_websocket.py
(+108 files in other folders)
