[project]
name = "sootool"
version = "0.1.1"
# keep in sync with README first paragraph (ADR-019)
description = "LLM이 확률 추론으로 산수를 틀리는 구조적 한계를 차단하는 정밀 계산 MCP 서버. Decimal 전용 커널, 16개 계산 도메인 243개 기본 도구 + 10개 admin 정책 도구, 5종 전송(stdio/HTTP/SSE/WebSocket/Unix)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "최진호", email = "jinho.von.choi@nerdvana.kr" }
]
keywords = [
    "mcp",
    "llm",
    "decimal",
    "calculation",
    "tax",
    "finance",
    "accounting",
    "engineering",
    "korean-tax",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial :: Accounting",
]
requires-python = ">=3.12"
dependencies = [
    "holidays>=0.95",
    "mcp[cli]>=1.2",
    "mpmath>=1.4.1",
    "numpy>=2.0",
    "numpy-financial>=1.0.0",
    "pint>=0.25.3",
    "pydantic>=2.13.3",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "scipy>=1.13",
    "statsmodels>=0.14.6",
    "workalendar>=17.0.0",
    "uvicorn[standard]>=0.33",
    "starlette>=0.47",
    "websockets>=14",
]

[project.urls]
Homepage   = "https://github.com/JinHo-von-Choi/SooTool"
Repository = "https://github.com/JinHo-von-Choi/SooTool"
Issues     = "https://github.com/JinHo-von-Choi/SooTool/issues"

[project.scripts]
sootool = "sootool.__main__:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "anthropic>=0.96.0",
    "google-genai>=1.73.1",
    "hypothesis>=6.152.1",
    "mypy>=1.20.2",
    "openai>=2.32.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "types-python-dateutil>=2.9.0.20260408",
]

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["E501", "S101"]

[tool.ruff.lint.per-file-ignores]
# scripts/ 는 개발·운영 유틸로 subprocess 와 하드코딩 토큰이 로컬 스모크 테스트 용도로 필요하다.
"scripts/*" = ["S105", "S603", "S607"]
# tests/bench/ 는 벤치마크 팀 소유 영역 — import 정렬은 해당 팀이 추후 정리한다.
"tests/bench/*" = ["I001"]

[tool.mypy]
python_version        = "3.12"
strict                = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude               = ["tests/"]
# NOTE: deliberate relaxations from full strict mode:
#   disallow_untyped_defs=false — pint/mpmath lack py.typed; function signatures
#     throughout units.py/cast.py use runtime Quantity objects that mypy cannot type.
#   ignore_missing_imports=true — pint, mpmath, mcp have no bundled stubs.
#   __main__.py FastMCP.run kwargs (host/port) are not in the mcp package's type stubs.
# Deviation documented: ADR-011 (tooling gates).

[[tool.mypy.overrides]]
module = ["pint.*", "mpmath.*", "mcp.*", "yaml.*", "dateutil.*", "holidays.*", "workalendar.*"]
ignore_missing_imports = true

# scripts/mcp_smoke_* 는 MCP SDK 타입 스텁 불균일로 인한 legacy `type: ignore` 주석이 남아 있다.
# 기존 스모크 스크립트는 해당 팀에서 정리 예정이므로 unused-ignore 를 비활성화한다.
[[tool.mypy.overrides]]
module = [
    "mcp_smoke_http",
    "mcp_smoke_sse",
    "mcp_smoke_stdio",
    "mcp_smoke_test",
    "mcp_smoke_unix",
    "mcp_smoke_ws",
]
warn_unused_ignores = false

[tool.pytest.ini_options]
addopts   = "--strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/sootool"]
